app_controllers/infrastructure/kubernetes-deployments/authentication/auth/01_deployment-us-central1-a-auth-username.yml

kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: auth
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: thomseddon/traefik-forward-auth:2
        ports:
          - containerPort: 4181
            protocol: TCP
        livenessProbe:
            tcpSocket:
              port: 4181
            initialDelaySeconds: 20
            failureThreshold: 3
            successThreshold: 1
            periodSeconds: 10
            timeoutSeconds: 2
        volumeMounts:
          - name: dockersock
            mountPath: "/var/run/docker.sock"
      volumes:
      - name: dockersock
        hostPath:
          path: /var/run/docker.sock
