app_controllers/infrastructure/kubernetes-deployments/authentication/auth/03_ingress-us-central1-a-auth-username.yml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: auth
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/auth-trust-headers: true
    ingress.kubernetes.io/auth-type: forward
    ingress.kubernetes.io/auth-url: http://auth
    ingress.kubernetes.io/auth-response-headers: X-Forwarded-User
spec:
  rules:
  - host: auth.securethebox.us
    http:
      paths:
      - path: /
        backend:
          serviceName: auth
          servicePort: http
